# ploshtadka-venues-ms

./: CLAUDE.md  Dockerfile  README.md  entrypoint.sh  main.py  pyproject.toml
.github/workflows/: ci.yml
.serena/: project.yml
app/: crud.py  deps.py  logging.py  models.py  schemas.py  scopes.py  settings.py
app/routers/: health.py  images.py  unavail.py  venue.py
scripts/: check.sh
tests/: conftest.py  factories.py  test_images.py  test_schemas.py  test_scopes.py  test_venues.py
