[project]
name = "mstemplate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aerich>=0.8.2",
    "fastapi[standard]>=0.112.4",
    "ms-core",
    "pydantic>=2.11.7",
    "tortoise-orm[asyncpg]>=0.21.7",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.2.0",
]
[dependency-groups]
dev = [
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "taskipy>=1.14",
]

[tool.taskipy.tasks]
check = "bash scripts/check.sh"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]  # Depends() in FastAPI function defaults is intentional

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]

[tool.pyright]
reportInvalidTypeForm = "none"

[tool.uv.sources]
ms-core = { url = "https://github.com/HexChap/MSCore/archive/refs/heads/master.zip" }

[tool.aerich]
tortoise_orm = "main.tortoise_conf"
location = "./migrations"
src_folder = "./."
